--- a/tes12.html
+++ b/tes12.html
@@ -3,26 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Google Drive API Example</title>
+    <title>Google Drive Shared Files</title>
     <script src="https://apis.google.com/js/api.js"></script>
 </head>
 <body>
 
-    <h2>Google Drive API Example</h2>
+    <h2>Daftar File dan Folder yang Dibagikan ke Saya</h2>
     <button id="login-button">Login with Google</button>
-    <button id="upload-button" style="display:none;">Upload File</button>
-    <button id="list-files-button" style="display:none;">List Files</button>
+    <button id="list-files-button" style="display:none;">Lihat File Dibagikan</button>
     <ul id="file-list"></ul>
 
     <script type="text/javascript">
         // Client ID dari Google Cloud Console
-        const CLIENT_ID = '813200627487-m1bte9iacbocsr0i8gqgbp5vudh495as.apps.googleusercontent.com'; // Ganti dengan Client ID milikmu 
+        const CLIENT_ID = '813200627487-m1bte9iacbocsr0i8gqgbp5vudh495as.apps.googleusercontent.com'; // Ganti dengan Client ID milikmu
 
         // ID API untuk Google Drive
         const API_KEY = 'AIzaSyBcx_GLOdIkHQ-9jKkAJGaXv4j13SNSTHg'; // Ganti dengan API Key milikmu
 
         // Scopes yang dibutuhkan untuk mengakses Drive
-        const SCOPES = 'https://www.googleapis.com/auth/drive.file';
+        const SCOPES = 'https://www.googleapis.com/auth/drive.readonly';
 
         // Mendapatkan akses token dan memulai API
         function initClient() {
@@ -47,11 +46,9 @@
         function updateSigninStatus(isSignedIn) {
             if (isSignedIn) {
                 document.getElementById('login-button').style.display = 'none';
-                document.getElementById('upload-button').style.display = 'inline-block';
                 document.getElementById('list-files-button').style.display = 'inline-block';
             } else {
                 document.getElementById('login-button').style.display = 'inline-block';
-                document.getElementById('upload-button').style.display = 'none';
                 document.getElementById('list-files-button').style.display = 'none';
             }
         }
@@ -66,37 +63,12 @@
             gapi.auth2.getAuthInstance().signOut();
         }
 
-        // Fungsi untuk mengupload file ke Google Drive
-        function uploadFile() {
-            var fileContent = 'Hello, World!'; // Isi file yang ingin diupload
-            var file = new Blob([fileContent], { type: 'text/plain' });
-
-            var metadata = {
-                name: 'sample.txt',
-                mimeType: 'text/plain'
-            };
-
-            var accessToken = gapi.auth2.getAuthInstance().currentUser.get().getAuthResponse().access_token;
-            var form = new FormData();
-            form.append('metadata', new Blob([JSON.stringify(metadata)], { type: 'application/json' }));
-            form.append('file', file);
-
-            var xhr = new XMLHttpRequest();
-            xhr.open('POST', 'https://www.googleapis.com/upload/drive/v3/files?uploadType=multipart');
-            xhr.setRequestHeader('Authorization', 'Bearer ' + accessToken);
-            xhr.onreadystatechange = function() {
-                if (xhr.readyState === 4 && xhr.status === 200) {
-                    alert('File uploaded successfully!');
-                }
-            };
-            xhr.send(form);
-        }
-
-        // Fungsi untuk list file dari Google Drive
-        function listFiles() {
+        // Fungsi untuk menampilkan file yang dibagikan ke saya
+        function listSharedFiles() {
             gapi.client.drive.files.list({
-                'pageSize': 10,
-                'fields': 'nextPageToken, files(id, name)'
+                'q': "'me' in readers",  // Mencari file yang dibagikan dengan saya
+                'fields': 'nextPageToken, files(id, name, mimeType, shared)',
+                'spaces': 'drive'
             }).then(function(response) {
                 var files = response.result.files;
                 if (files && files.length > 0) {
@@ -104,19 +76,18 @@
                     fileList.innerHTML = '';
                     files.forEach(function(file) {
                         var listItem = document.createElement('li');
-                        listItem.textContent = file.name;
+                        listItem.textContent = file.name + ' (' + file.mimeType + ')';
                         fileList.appendChild(listItem);
                     });
                 } else {
-                    alert('No files found.');
+                    alert('Tidak ada file yang dibagikan kepada Anda.');
                 }
             });
         }
 
         // Menambahkan event listener
         document.getElementById('login-button').addEventListener('click', handleAuthClick);
-        document.getElementById('upload-button').addEventListener('click', uploadFile);
-        document.getElementById('list-files-button').addEventListener('click', listFiles);
+        document.getElementById('list-files-button').addEventListener('click', listSharedFiles);
 
         // Memulai inisialisasi
         handleClientLoad();
