--- a/tes12.html
+++ b/tes12.html
@@ -21,7 +21,7 @@
         const API_KEY = 'AIzaSyBcx_GLOdIkHQ-9jKkAJGaXv4j13SNSTHg'; // Ganti dengan API Key milikmu
 
         // Scopes yang dibutuhkan untuk mengakses Drive
-        const SCOPES = 'https://www.googleapis.com/auth/drive.readonly';
+        const SCOPES = 'https://www.googleapis.com/auth/drive.file';
 
         // Mendapatkan akses token dan memulai API
         function initClient() {
